                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 09-02-2006 added: display a/v sync in codecinfo during playback in dvdplayer + some new code to prepare for a new syncing system.
 - 09-02-2006 fixed: some dvd's would stutter way more than before after the THX fix (not the major stutter issue). buffers are now only played out if timestamp wraps backwords
 - 09-02-2006 added: IP Address button from the normal virtual keyboard to link to the IP address input dialog.
 - 09-02-2006 changed: Controls that are initially hidden will not be animated using WindowOpen.
 - 09-02-2006 fixed: Some ID3 tags that used multiple strings per tag were using the last string (often empty).  Now we just use the first non-empty string.
 - 09-02-2006 changed: PlayerControls.xml closes due to skin condition rather than code conditions.
 - 09-02-2006 fixed: Start wouldn't close OSD Audio Settings.  Keymap.xml entry added.
 - 08-02-2006 added: display cpu usage for audio/video/player thread in dvdplayer.
 - 08-02-2006 fixed: Includes messed up the order in the xml file.
 - 08-02-2006 fixed: Audio/Subtitle settings dialog was not working correctly.
 - 08-02-2006 changed: <id> is only read for custom windows.
 - 08-02-2006 fixed: Dialogs without WindowClose animations but with controls that had WindowClose animations didn't close.
 - 08-02-2006 changed: Movement off a control is only attempted if we are moving to a different control.
 - 08-02-2006 fixed: Better animation timing when animations are reversed and they have delays.
 - 07-02-2006 added: New LCD info labels thanks to Jeff McClain.
 - 06-02-2006 fixed: sf.net bug report [1425166]: CDG not working in Library.